Changes outside TX are prohibited in SQL (#149)